Remove overflow hidden for scrolling issues

--- a/acarshub-typescript/src/css/site.css
+++ b/acarshub-typescript/src/css/site.css
@@ -36,7 +36,7 @@ body {
   scrollbar-width: none; /* for Firefox */
   max-width: 100vw;
   max-height: 100vh;
-  overflow-y: hidden;
+  /* overflow-y: hidden; */
 }
 
 .header {
